--- a/weather.html
+++ b/weather.html
@@ -20,7 +20,7 @@
 			<div id="weather-info" class="animate__animated animate__fadeIn">
 				<h3 id="city-name"></h3>
 				<p id="date"></p>
-				<img id="Icon" src="weathericon2.png" alt="Weather Icon" width="20%" height="20%">
+				<img id="Icon" src="weather_icon.png" alt="Weather Icon" width="20%" height="20%">
 				<p id="temperature"></p>
 				<p id="description"></p>
 				<p id="wind-speed"></p>
